Well I thought I had... Now I've fixed the stupid effing spacing bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-  min-height: 90vh;
+  min-height: 75vh;
   margin-top: 95px;
 }
 
