--- a/styles/scss/_rules.scss
+++ b/styles/scss/_rules.scss
@@ -18,7 +18,7 @@ body{
 }
 
 main{
-    min-height: 90vh;
+    min-height: 75vh;
     margin-top: $desktop-header-height;
 }
 
